--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,13 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: |
-          npm install
+        run: npm ci
 
       - name: Run tests
-        run: |
-          npm test -- --watchAll=false
+        run: npm test -- --watchAll=false
+
+      - name: Build project
+        run: npm run build
+
+      - name: Check code style
+        run: npm run lint
